fix: TW-88003 prevent text overflow
Merge-request: TC-MR-11672
Merged-by: Iaroslav Molochkov <iaroslav.molochkov@jetbrains.com>

--- a/aws-core-ui/src/App/styles.css
+++ b/aws-core-ui/src/App/styles.css
@@ -106,6 +106,13 @@
   flex-grow: 1;
 }
 
+.externalId button {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 0;
+}
+
 .convertWarningBox {
   margin-top: 12px;
   width: 400px;
